test_suite/tests/ui/identifier/variant_struct.stderr
error: `variant_identifier` can only be used on an enum
 --> $DIR/variant_struct.rs:4:10
  |
4 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^

error: aborting due to previous error

